# gtd-coach

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  GRAPHITI_IMPROVEMENTS.md  GRAPHITI_INTEGRATION.md  GRAPHITI_OPTIMIZATIONS_SUMMARY.md  KNOWN_ISSUES.md  LANGFUSE_INTEGRATION.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  QUICK_START.md  README.md  SECURITY.md  SETUP_COMPLETE.md  TEST_EXECUTION_REPORT.md  TIMING_SETUP.md  TIMING_SIMPLE_SETUP.md  USAGE_GUIDE.md  activate.sh  add_langfuse_simple.py  adhd_patterns.py  analyze_timing.py  benchmark_gtd_operations.py  codecov.yml  demo-review.py  docker-compose.yml  docker-run.sh  generate_summary.py  graphiti_client.py  graphiti_integration.py  gtd-review.py  gtd_entities.py  gtd_entity_config.py  (+37 more)
.github/: labeler.yml
analysis/: prompt_analysis_20250810_171237.json  prompt_analysis_20250810_171406.json
config/: .env.example
data/: agent_state.db  baseline_20250811_194735.json  mindsweep_20250802_212136.json  mindsweep_20250804_125822.json  mindsweep_20250804_134240.json  mindsweep_20250804_135128.json  mindsweep_20250804_141047.json  mindsweep_20250804_142154.json  mindsweep_20250804_144043.json  priorities_20250804_134240.json  timing_analysis.json
docker/: Dockerfile.test  docker-compose.test.yml
docs/: CONFIGURATION.md  CONSOLIDATION_SUMMARY.md  DEVELOPER.md  EVALUATION_SYSTEM_STATUS.md  FALKORDB_MIGRATION_COMPLETE.md  LANGGRAPH_V0.6_MIGRATION.md  MAINTENANCE.md  N_OF_1_IMPLEMENTATION_SUMMARY.md  PATTERN_LEARNING_PHASE2.md  PERFORMANCE_BASELINES.md  PHASE3_INTERVENTIONS.md  PHASE4_ADAPTIVE_BEHAVIOR.md  SETUP_TIMING.md  graphiti-enhancements-summary.md  model-comparison.md  phase4_week3_progress.md
examples/: demo-review-xlam.py  demo-review.py  quick-test.py  test-enhanced-gtd.py
gtd_coach/: __main__.py  coach.py
logs/: review_20250802_212301.json  review_20250804_130328.json  review_20250804_134240.json  review_20250804_135521.json  review_20250804_141756.json  review_20250804_142157.json
prompts/: system-prompt.txt
scripts/: LANGFUSE_ANALYZER_USAGE.md  analyze_coverage.py  collect_baseline.py  (+28 more)
(+237 files in other folders)
